iml-services/iml-device/src/virtual_device/snapshots/iml_device__virtual_device__tests__full_mds_commands_test_5_mds1.local_4.snap
---
source: iml-services/iml-device/src/virtual_device/mod.rs
expression: c
---
{
  "ScsiDevice": {
    "serial": "36001405c476be7a53a94ca9a1ecc4512",
    "scsi80": "SLIO-ORG mdt2            c476be7a-53a9-4ca9-a1ec-c45123444aaf",
    "major": "8",
    "minor": "96",
    "devpath": "/devices/platform/host2/session1/target2:0:0/2:0:0:2/block/sdg",
    "size": 5368709120,
    "filesystem_type": "mpath_member",
    "fs_uuid": "15735427682094461090",
    "fs_label": "mdt1",
    "paths": [
      "/dev/disk/by-id/scsi-36001405c476be7a53a94ca9a1ecc4512",
      "/dev/disk/by-id/wwn-0x6001405c476be7a53a94ca9a1ecc4512",
      "/dev/disk/by-path/fc---lun-2",
      "/dev/disk/by-path/ip-10.73.40.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:mds-lun-2",
      "/dev/disk/by-label/mdt1",
      "/dev/disk/by-uuid/15735427682094461090",
      "/dev/sdg"
    ],
    "mount": null,
    "children": [
      {
        "Mpath": {
          "devpath": "/devices/virtual/block/dm-2",
          "serial": "36001405c476be7a53a94ca9a1ecc4512",
          "scsi80": "SLIO-ORG mdt2            c476be7a-53a9-4ca9-a1ec-c45123444aaf",
          "dm_name": "mpathc",
          "size": 5368709120,
          "major": "253",
          "minor": "2",
          "filesystem_type": "zfs_member",
          "fs_uuid": "15735427682094461090",
          "fs_label": "mdt1",
          "paths": [
            "/dev/mapper/mpathc",
            "/dev/disk/by-id/dm-name-mpathc",
            "/dev/disk/by-id/dm-uuid-mpath-36001405c476be7a53a94ca9a1ecc4512",
            "/dev/disk/by-label/mdt1",
            "/dev/disk/by-uuid/15735427682094461090",
            "/dev/dm-2"
          ],
          "children": [
            {
              "Zpool": {
                "guid": 15735427682094461090,
                "name": "mdt1",
                "health": "ONLINE",
                "state": "ACTIVE",
                "size": 5335154688,
                "vdev": {
                  "Root": {
                    "children": [
                      {
                        "Disk": {
                          "guid": 16258285564914154282,
                          "state": "ONLINE",
                          "path": "/dev/mapper/mpathc",
                          "dev_id": "dm-uuid-mpath-36001405c476be7a53a94ca9a1ecc4512",
                          "phys_path": null,
                          "whole_disk": false,
                          "is_log": false
                        }
                      }
                    ],
                    "spares": [],
                    "cache": []
                  }
                },
                "props": [],
                "children": [
                  {
                    "Dataset": {
                      "guid": 4108118629837537584,
                      "name": "mdt1/mdt1",
                      "kind": "filesystem",
                      "props": [
                        {
                          "name": "name",
                          "value": "mdt1/mdt1"
                        },
                        {
                          "name": "type",
                          "value": "filesystem"
                        },
                        {
                          "name": "creation",
                          "value": "1587638254"
                        },
                        {
                          "name": "used",
                          "value": "3241472"
                        },
                        {
                          "name": "available",
                          "value": "5164982272"
                        },
                        {
                          "name": "referenced",
                          "value": "3241472"
                        },
                        {
                          "name": "compressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "mounted",
                          "value": "no"
                        },
                        {
                          "name": "quota",
                          "value": "0"
                        },
                        {
                          "name": "reservation",
                          "value": "0"
                        },
                        {
                          "name": "recordsize",
                          "value": "131072"
                        },
                        {
                          "name": "mountpoint",
                          "value": "/mdt1/mdt1"
                        },
                        {
                          "name": "sharenfs",
                          "value": "off"
                        },
                        {
                          "name": "checksum",
                          "value": "on"
                        },
                        {
                          "name": "compression",
                          "value": "off"
                        },
                        {
                          "name": "atime",
                          "value": "on"
                        },
                        {
                          "name": "devices",
                          "value": "on"
                        },
                        {
                          "name": "exec",
                          "value": "on"
                        },
                        {
                          "name": "setuid",
                          "value": "on"
                        },
                        {
                          "name": "readonly",
                          "value": "off"
                        },
                        {
                          "name": "zoned",
                          "value": "off"
                        },
                        {
                          "name": "snapdir",
                          "value": "hidden"
                        },
                        {
                          "name": "aclinherit",
                          "value": "restricted"
                        },
                        {
                          "name": "createtxg",
                          "value": "10"
                        },
                        {
                          "name": "canmount",
                          "value": "off"
                        },
                        {
                          "name": "xattr",
                          "value": "sa"
                        },
                        {
                          "name": "copies",
                          "value": "1"
                        },
                        {
                          "name": "version",
                          "value": "5"
                        },
                        {
                          "name": "utf8only",
                          "value": "off"
                        },
                        {
                          "name": "normalization",
                          "value": "none"
                        },
                        {
                          "name": "casesensitivity",
                          "value": "sensitive"
                        },
                        {
                          "name": "vscan",
                          "value": "off"
                        },
                        {
                          "name": "nbmand",
                          "value": "off"
                        },
                        {
                          "name": "sharesmb",
                          "value": "off"
                        },
                        {
                          "name": "refquota",
                          "value": "0"
                        },
                        {
                          "name": "refreservation",
                          "value": "0"
                        },
                        {
                          "name": "guid",
                          "value": "4108118629837537584"
                        },
                        {
                          "name": "primarycache",
                          "value": "all"
                        },
                        {
                          "name": "secondarycache",
                          "value": "all"
                        },
                        {
                          "name": "usedbysnapshots",
                          "value": "0"
                        },
                        {
                          "name": "usedbydataset",
                          "value": "3241472"
                        },
                        {
                          "name": "usedbychildren",
                          "value": "0"
                        },
                        {
                          "name": "usedbyrefreservation",
                          "value": "0"
                        },
                        {
                          "name": "logbias",
                          "value": "latency"
                        },
                        {
                          "name": "dedup",
                          "value": "off"
                        },
                        {
                          "name": "mlslabel",
                          "value": "none"
                        },
                        {
                          "name": "sync",
                          "value": "standard"
                        },
                        {
                          "name": "dnodesize",
                          "value": "auto"
                        },
                        {
                          "name": "refcompressratio",
                          "value": "1.00x"
                        },
                        {
                          "name": "written",
                          "value": "3241472"
                        },
                        {
                          "name": "logicalused",
                          "value": "1720832"
                        },
                        {
                          "name": "logicalreferenced",
                          "value": "1720832"
                        },
                        {
                          "name": "volmode",
                          "value": "default"
                        },
                        {
                          "name": "filesystem_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_limit",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "filesystem_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapshot_count",
                          "value": "18446744073709551615"
                        },
                        {
                          "name": "snapdev",
                          "value": "hidden"
                        },
                        {
                          "name": "acltype",
                          "value": "off"
                        },
                        {
                          "name": "context",
                          "value": "none"
                        },
                        {
                          "name": "fscontext",
                          "value": "none"
                        },
                        {
                          "name": "defcontext",
                          "value": "none"
                        },
                        {
                          "name": "rootcontext",
                          "value": "none"
                        },
                        {
                          "name": "relatime",
                          "value": "off"
                        },
                        {
                          "name": "redundant_metadata",
                          "value": "all"
                        },
                        {
                          "name": "overlay",
                          "value": "off"
                        },
                        {
                          "name": "lustre:flags",
                          "value": "33"
                        },
                        {
                          "name": "lustre:fsname",
                          "value": "zfsmo"
                        },
                        {
                          "name": "lustre:mgsnode",
                          "value": "10.73.20.11@tcp:10.73.20.12@tcp"
                        },
                        {
                          "name": "lustre:failover.node",
                          "value": "10.73.20.11@tcp"
                        },
                        {
                          "name": "lustre:index",
                          "value": "1"
                        },
                        {
                          "name": "lustre:version",
                          "value": "1"
                        },
                        {
                          "name": "lustre:svname",
                          "value": "zfsmo-MDT0001"
                        }
                      ],
                      "mount": null
                    }
                  }
                ],
                "mount": {
                  "source": "mdt1",
                  "target": "/mdt1",
                  "fs_type": "zfs",
                  "opts": "rw,xattr,noacl"
                }
              }
            }
          ],
          "mount": null
        }
      }
    ]
  }
}
